--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,6 @@
 
 body {
-  background-color: #ff746c;
+  background-color: #ff6961;
   color: #ffffff;
   font-family: Arial, sans-serif;
   padding: 20px;
@@ -20,7 +20,7 @@ body {
 }
 h1 {
   text-align: center;
-  color: #ffffff;
+  color: #a62520;
 }
 footer {
   margin-top: 40px;
@@ -29,7 +29,7 @@ footer {
   color: #ffdfdf;
 }
 .semestre {
-  background-color: #ff746c;
+  background-color: #ff9688;
   border: 2px solid #cf2323;
   padding: 20px;
   border-radius: 20px;
@@ -38,7 +38,7 @@ footer {
   min-width: 200px;
   max-width: 320px;
   align-items: center;
-  background-color: #ff746c;
+  background-color: #ff9688;
   box-sizing: border-box;
   margin-bottom: 30px;
 }
@@ -65,8 +65,8 @@ footer {
   margin: 8px;
   display: center;
   width: 200px;
-  background-color: #ff746c;
-  color: #ffffff;
+  background-color: #e2504c;
+  color: #a62520;
   text-align: center;
   cursor: pointer;
   transition: all 0.2s ease;
