--- a/css/styles.css
+++ b/css/styles.css
@@ -65,8 +65,8 @@ footer {
   margin: 8px;
   display: center;
   width: 200px;
-  background-color: #ff9688;
-  color: #a62520;
+  background-color: #ffe6e6;
+  color: #c73e3e;
   text-align: center;
   cursor: pointer;
   transition: all 0.2s ease;
