--- a/css/styles.css
+++ b/css/styles.css
@@ -26,7 +26,7 @@ footer {
   margin-top: 40px;
   text-align: center;
   font-style: italic;
-  color: #ffdfdf;
+  color: #e2504c;
 }
 .semestre {
   background-color: #e2504c;
